--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html>
- <title>this is title</title>
- </head>
- <body>
-  <h1>this is heading</h1>
-  <h2>this is heading</h2>
-  <h3>this is heading</h3>
-  </body>
-  </html>
+hummmm
+tummmmm
+
+
+
+shabana
