--- a/index.html
+++ b/index.html
@@ -1,8 +1,3 @@
-<!DOCTYPE html>
-<html>
- <title>this is title</title>
- </head>
- <body>
-  <h1>this is heading</h1>
-  </body>
-  </html>
+aye mere watan k logon.
+zara ankhon me bhar lo paani.jo shaheed hue hain unki...
+zara yaad karo kurbaani
